; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_aes.c_aes_encrypt_get_ctx_size_gcm.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/crypto/extr_corecrypto_aes.c_aes_encrypt_get_ctx_size_gcm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.ccmode_gcm* }
%struct.ccmode_gcm = type { i32 }

@g_crypto_funcs = common dso_local global %struct.TYPE_2__* null, align 8
@ccgcm_ctx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_encrypt_get_ctx_size_gcm() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.ccmode_gcm*, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %4, align 8
  store %struct.ccmode_gcm* %5, %struct.ccmode_gcm** %2, align 8
  %6 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %2, align 8
  %7 = icmp ne %struct.ccmode_gcm* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %15

9:                                                ; preds = %0
  %10 = load i32, i32* @ccgcm_ctx, align 4
  %11 = load %struct.ccmode_gcm*, %struct.ccmode_gcm** %2, align 8
  %12 = getelementptr inbounds %struct.ccmode_gcm, %struct.ccmode_gcm* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @cc_ctx_sizeof(i32 %10, i32 %13)
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %9, %8
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i32 @cc_ctx_sizeof(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
